# rust-pattern-macros

./: Cargo.toml  LICENSE  README.md
examples/: observable_example.rs  simple_factory_example.rs
src/: lib.rs  observable.rs  simple_factory.rs
tests/: observable_test.rs  simple_factory_test.rs
