[package]
name = "rust-pattern-macros"
version = "0.1.2"
edition = "2024"
description = "Procedural macros for the rust-patterns crate"
license = "MIT"
authors = ["Linshan Yang <yanglsh@yeah.net>"]
repository = "https://github.com/sdht-siset/rust-pattern-macros.git"
documentation = "https://docs.rs/rust-pattern-macros"
readme = "README.md"
keywords = ["macro", "factory", "pattern", "design-patterns"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
rust-patterns = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
